--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,18 @@
 {
     "presets": [
+        "@babel/typescript",
         [
-            "@babel/env", {
+            "@babel/env",
+            {
                 "useBuiltIns": "entry",
-                "corejs": { 
-                    "version": "2"
+                "corejs": {
+                    "version": "3"
                 }
-            },
-            "@babel/typescript"
+            }
         ]
+    ],
+    "plugins": [
+        "@babel/proposal-class-properties",
+        "@babel/proposal-object-rest-spread"
     ]
 }
