--- a/package.json
+++ b/package.json
@@ -9,15 +9,23 @@
     "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
   },
   "lint-staged": {
-    "*.{ts}": ["npm run lint", "npm run prettier-format"]
+    "*.{ts}": [
+      "npm run lint",
+      "npm run prettier-format"
+    ]
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
     "@babel/preset-env": "^7.13.10",
     "@babel/preset-typescript": "^7.13.0",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-node-resolve": "^11.2.0",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "autoprefixer": "^10.2.5",
-    "core-js": "^2.6.12",
+    "core-js": "^3.9.1",
     "cross-env": "^7.0.3",
     "cssnano": "^4.1.10",
     "eslint-config-prettier": "^8.1.0",
@@ -28,11 +36,8 @@
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.41.2",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-terser": "^7.0.2",
