--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,18 +6,15 @@
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "moduleResolution": "node",
+    "isolatedModules": true,
     "esModuleInterop": true,
     "noUnusedLocals": true,
     "noImplicitAny": true,
+    "declaration": true,
     "target": "esnext",
     "module": "esnext",
+    "allowJs": true,
+    "noEmit": true,
     "strict": true
-  },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  }
 }
