--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,7 @@
         [
             "@babel/env",
             {
-                "useBuiltIns": "entry",
+                "useBuiltIns": "usage",
                 "corejs": {
                     "version": "3"
                 }
